--- a/_site.yml
+++ b/_site.yml
@@ -4,7 +4,7 @@ navbar:
   left:
     - text: "Data management"
       href: 01_datamanagement.html
-    - text: "Data handling and Visualiation in R"
+    - text: "Data handling and Visualisation in R"
       href: 02_datahandling.html
     - text: "Spatial Data in QGIS"
       href: 03_QGIS.html
